# aioresponses

./: .coveragerc  .gitignore  .landscape.yml  .pyup.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  README.rst  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini  unittest.cfg
.github/workflows/: ci.yml  flake8.yml
aioresponses/: __init__.py  compat.py  core.py
docs/: Makefile  aioresponses.rst  conf.py  index.rst  installation.rst  make.bat  modules.rst  usage.rst
tests/: test_aioresponses.py  test_compat.py
