[metadata]
name = aioresponses
author = Paweł Nuckowski
author-email = p.nuckowski@gmail.com
summary = Mock out requests made by ClientSession from aiohttp package
description-file = README.rst
home-page = https://github.com/pnuckowski/aioresponses
classifier =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  Topic :: Internet :: WWW/HTTP
  Topic :: Software Development :: Testing
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7

[files]
packages =
 aioresponses

[build_sphinx]
all_files = 1
build-dir = docs/build
source-dir = docs/source

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[tool:pytest]
testpaths = tests
