[metadata]
name = aioresponses
author = Pawel Nuckowski
author-email = p.nuckowski@gmail.com
summary = Mock out requests made by ClientSession from aiohttp package
description-file = README.rst
home-page = https://github.com/pnuckowski/aioresponses
classifier =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Operating System :: OS Independent
  Topic :: Internet :: WWW/HTTP
  Topic :: Software Development :: Testing
  Topic :: Software Development :: Testing :: Mocking
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[files]
packages =
 aioresponses

[build_sphinx]
all_files = 1
build-dir = docs/build
source-dir = docs/source

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[tool:pytest]
testpaths = tests
